# piperack

./: .gitignore  CONTRIBUTION.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: bump-and-tag.yml  ci.yml  release.yml
docs/: README.md  architecture.md  configuration.md  installation.md  testing.md  usage.md
examples/: ansi_demo.sh  full_stack.toml  input_echo.sh  lorem_alpha.sh  lorem_beta.sh  mock_api.sh  mock_db.sh  mock_redis.py  mock_web.sh  mock_worker.sh  piperack.toml
scripts/: release_local.sh
src/: ansi.rs  app.rs  clipboard.rs  config.rs  events.rs  main.rs  output.rs  process.rs  runner.rs  tui.rs  update.rs  watch.rs
